[gd_scene load_steps=10 format=3 uid="uid://mlcphc0o3ojt"]

[ext_resource type="Theme" uid="uid://dlcyl15yhjf8a" path="res://src/main/etc/theme/my_theme.tres" id="1_ra7yo"]
[ext_resource type="Script" path="res://src/main/scene/ui/Common/BoostCard/boost_card.gd" id="1_wc6kf"]
[ext_resource type="Texture2D" uid="uid://cjljygdywytv6" path="res://assets/MyIcon/BoostCard/BoostCard.png" id="2_ko0t3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h8xa4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ayiv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_01n53"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_82f4t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6bkmt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tn34p"]
atlas = ExtResource("2_ko0t3")
region = Rect2(0, 0, 64, 96)

[node name="BoostCard" type="Button"]
custom_minimum_size = Vector2(64, 96)
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(32, 48)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ra7yo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_h8xa4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0ayiv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_01n53")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_82f4t")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6bkmt")
script = ExtResource("1_wc6kf")

[node name="CardTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 96)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("AtlasTexture_tn34p")

[node name="NameLabel" type="Label" parent="CardTexture"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 56.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DetailLabel" type="Label" parent="CardTexture"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 0
offset_left = 2.0
offset_top = 56.0
offset_right = 62.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 4
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_entered" from="CardTexture" to="." method="_on_card_texture_mouse_entered"]
[connection signal="mouse_exited" from="CardTexture" to="." method="_on_card_texture_mouse_exited"]
